force-app/main/default/objects/Species__c/Species__c.object-meta.xml
<CustomObject>
    <label>Species</label>
    <nameField>
        <label>Specie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Species</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>