force-app/main/default/objects/Species__c/fields/Ideal_Min_Termperature__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Min_Termperature__c</fullName>
    <label>Ideal Min Termperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>