force-app/main/default/objects/Species__c/fields/Recommended_fertilizer__c.field-meta.xml
<CustomField>
    <fullName>Recommended_fertilizer__c</fullName>
    <label>Recommended fertilizer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>