force-app/main/default/objects/Species__c/fields/Summer_Ferlilization_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Summer_Ferlilization_Frecuency__c</fullName>
    <label>Summer Ferlilization Frecuency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Situations_Life</valueSetName>
    </valueSet>
</CustomField>