force-app/main/default/objects/Species__c/fields/Summer_Watering_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Summer_Watering_Frecuency__c</fullName>
    <label>Summer Watering Frecuency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Anualy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>