force-app/main/default/objects/Species__c/fields/Winter_Watering_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Winter_Watering_Frecuency__c</fullName>
    <label>Winter Watering Frecuency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Situations_Life</valueSetName>
    </valueSet>
</CustomField>