force-app/main/default/objects/Species__c/listViews/Species.listView-meta.xml
<ListView>
    <fullName>Species</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Ideal_Max_Temperature__c</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Pulverization__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>Species</label>
</ListView>